First step to access rust code from java using early access panama code !