@@ -2,3 +2,11 @@
 
 Make it easy to access rs-handlegraph implementations in an other language.
 
+
+# java
+
+Uses early access build of project panama
+
+~/bin/jdk-16/bin/java -Dforeign.restricted=permit --add-modules jdk.incubator.foreign libhandlegraph-jni.java
+
+
